<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CreateNew"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_miscellaneous"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="13dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/camera"
            app:tint="@color/dark_blue" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1.9"
            android:text="@string/camera"
            android:textColor="@color/black"
            android:textSize="15sp"  />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/viewColor"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/photos"
            app:tint="@color/green" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1.9"
            android:text="@string/photo_video"
            android:textColor="@color/black"
            android:textSize="15sp"  />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/viewColor"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/background"
            app:tint="@color/teal_200" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1.9"
            android:text="@string/background_color"
            android:textColor="@color/black"
            android:textSize="15sp"  />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/viewColor"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="11dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/video"
            app:tint="@color/color3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1.9"
            android:text="@string/live_video"
            android:textColor="@color/black"
            android:textSize="15sp"  />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/viewColor"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="11dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/job"
            app:tint="@color/dark_blue" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1.9"
            android:text="@string/create_job"
            android:textColor="@color/black"
            android:textSize="15sp"  />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/viewColor"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="11dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/messenger" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1.9"
            android:text="@string/get_messages"
            android:textColor="@color/black"
            android:textSize="15sp"  />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/viewColor"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="11dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/whatsapp"
            app:tint="@color/green" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1.9"
            android:text="@string/get_whatsapp_messages"
            android:textColor="@color/black"
            android:textSize="15sp"  />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/viewColor"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="11dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/location"
            app:tint="@color/orange" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1.9"
            android:text="@string/check_in"
            android:textColor="@color/black"
            android:textSize="15sp"  />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/viewColor"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="11dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/feeling"
            app:tint="@color/yellow" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1.9"
            android:text="@string/feeling_activity"
            android:textColor="@color/black"
            android:textSize="15sp"  />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/viewColor"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="11dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/date"
            app:tint="@color/color3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1.9"
            android:text="@string/create_event"
            android:textColor="@color/black"
            android:textSize="15sp"  />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/viewColor"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="11dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/gif"
            app:tint="@color/light_blue" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1.9"
            android:text="@string/gif"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/viewColor"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="11dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/gift"
            app:tint="@color/dark_blue" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1.9"
            android:text="@string/get_gift_card_purchases"
            android:textColor="@color/black"
            android:textSize="15sp"  />

    </LinearLayout>
</LinearLayout>
